[package]
name = "espae"
version = "0.1.0"
authors = ["Salsa Steve <elmanstevelaguna@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
burn = { version = "0.13.2", default-features = false, features = ["ndarray"] }
esp-backtrace = { version = "0.13.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = [ "esp32" ] }
esp-println = { version = "0.10.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
burn-import = { version = "0.13.2", default-features = false, features = ["onnx"] }

[features]
default = ["embedded-model"]

embedded-model = []
